# webcalyzer

./: .gitignore  AGENTS.md  Launch Webcalyzer.bat  Launch Webcalyzer.command  README.md  pyproject.toml
.claude/: launch.json
configs/: Falcon9_EchoStar-XXV.yaml  Starship-IFT-12.yaml  custom_quantities.yaml
configs/blue_origin/: new_glenn_default.yaml  new_glenn_ng3-05fps.yaml  new_glenn_ng3.yaml
docs/: .last-documented-commit  WEBAPP-DOCS-STYLE.md
docs/internal/: architecture.md  config-model.md  file-map.md  function-index.md  index.md  pipeline.md  web-backend.md  web-frontend.md
docs/user/: calibration.md  cli-reference.md  getting-started.md  index.md  outputs-and-review.md  postprocessing.md  profile-configuration.md  quantities.md  run-extraction.md  templates.md  trajectory-reconstruction.md
lib/: custom_quantities.yaml
outputs/benchmark_strip/: telemetry_clean.csv  telemetry_raw.csv
outputs/benchmark_tmp/: config_resolved.yaml  run_metadata.json  telemetry_clean.csv  telemetry_raw.csv
scripts/: launch_webcalyzer.ps1  launch_webcalyzer_macos.sh  launcher_fingerprint.py
tests/: test_cli.py  test_config.py  test_custom_quantities.py  test_extract_cancellation.py  test_extract_fallback.py  test_fixtures.py  test_ocr_backend.py  test_overlay.py  test_overlay_ffmpeg.py  test_plotting.py  test_postprocess.py  test_postprocessing_editor.py  test_sanitize.py  test_segments.py  test_trajectory.py  test_units.py  test_video.py  test_web_jobs.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+95 files in other folders)
